# slint-non-primitive-cast-f64-f64-f32-f32-repro

./: .gitignore  Cargo.toml  README.md
ui/: appwindow.slint
