[package]
name = "slint-non-primitive-cast-f64-f64-f32-f32-repro"
version = "0.1.0"
authors = ["Jakub Koralewski <contact@jcubed.me>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "=1.7.2"

[build-dependencies]
slint-build = "=1.7.2"
